<resources>
    <string name="app_name">Tap Mouse</string>
    <string name="exit">EXIT</string>
    <string name="play">PLAY</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="size">Size</string>
    <string name="back">BACK</string>
    <string name="slow">Slow</string>
    <string name="normal">Normal</string>
    <string name="fast">Fast</string>
    <string name="playSettings">PLAY</string>
    <string name="speed">Speed</string>
    <string name="give_me_feedback">Give me feedback!</string>
    <string name="tell_me_what_you_think_about_my_application">Tell me what you think about my application :)</string>
</resources>
