<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/sizeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#F89D9C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedLayout">

        <View
            android:id="@+id/lineSmallMedium"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/smallText" />

        <View
            android:id="@+id/lineMediumLarge"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/smallSwitch" />

        <Switch
            android:id="@+id/smallSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/mediumSwitch"
            app:layout_constraintStart_toStartOf="@+id/mediumSwitch"
            app:layout_constraintTop_toTopOf="@+id/lineSmallMedium" />

        <Switch
            android:id="@+id/mediumSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/lineSmallMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoSizeTextView" />

        <Switch
            android:id="@+id/largeSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/smallSwitch"
            app:layout_constraintStart_toStartOf="@+id/smallSwitch"
            app:layout_constraintTop_toBottomOf="@+id/lineMediumLarge" />

        <TextView
            android:id="@+id/smallText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/small"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/mediumSwitch"
            app:layout_constraintEnd_toStartOf="@+id/mediumSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mediumSwitch" />

        <TextView
            android:id="@+id/mediumText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/medium"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/smallSwitch"
            app:layout_constraintEnd_toStartOf="@+id/smallSwitch"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/smallSwitch" />

        <TextView
            android:id="@+id/largeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/large"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/largeSwitch"
            app:layout_constraintEnd_toStartOf="@+id/largeSwitch"
            app:layout_constraintHorizontal_bias="0.405"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/largeSwitch" />

        <TextView
            android:id="@+id/infoSizeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/size"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/speedLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#F89D9C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/lineSlowNormal"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slowSwitch" />

        <View
            android:id="@+id/lineNormalFast"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/normalSwitch" />

        <Switch
            android:id="@+id/slowSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/lineSlowNormal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoSpeedTextView" />

        <Switch
            android:id="@+id/normalSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/slowSwitch"
            app:layout_constraintStart_toStartOf="@+id/slowSwitch"
            app:layout_constraintTop_toBottomOf="@+id/lineSlowNormal" />

        <Switch
            android:id="@+id/fastSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/normalSwitch"
            app:layout_constraintStart_toStartOf="@+id/normalSwitch"
            app:layout_constraintTop_toBottomOf="@+id/lineNormalFast" />

        <TextView
            android:id="@+id/slowText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/slow"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/slowSwitch"
            app:layout_constraintEnd_toStartOf="@+id/slowSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/slowSwitch" />


        <TextView
            android:id="@+id/normalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/normal"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/normalSwitch"
            app:layout_constraintEnd_toStartOf="@+id/normalSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/normalSwitch" />

        <TextView
            android:id="@+id/FastText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/fast"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/fastSwitch"
            app:layout_constraintEnd_toStartOf="@+id/fastSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fastSwitch" />

        <TextView
            android:id="@+id/infoSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/speed"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <!--<LinearLayout-->
        <!--android:id="@+id/linearLayout"-->
        <!--android:layout_width="398dp"-->
        <!--android:layout_height="159dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:background="@color/colorButtonSettings"-->
        <!--android:orientation="vertical"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--tools:layout_editor_absoluteY="464dp">-->

        <!--<Button-->
            <!--android:id="@+id/button3"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/test"-->
            <!--android:text="Button" />-->

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="3dp"-->
            <!--android:layout_marginLeft="32dp"-->
            <!--android:layout_marginRight="32dp"-->
            <!--android:background="@color/colorPrimary" />-->

        <!--<Button-->
            <!--android:id="@+id/button4"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/test"-->
            <!--android:text="Button" />-->
    <!--</LinearLayout>-->

    <Button
        android:id="@+id/exitButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundedbutton"
        android:onClick="clickExit"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/playSettings"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="330dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeLayout"></LinearLayout>

</android.support.constraint.ConstraintLayout>